feat: Implement easy configuration (#5)
* chore: Move pages to template directory

* feat: Put template  tags

* feat: Implement config system

* feat: Publish page templates

* chore: Change html template format to ejs

* feat: Integrate articles and works publisher into page publisher

* chore: Build files

* docs: Update README.md

--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>Title</title>
+  <title>Lorem Ipsum</title>
 
   <meta name="viewport" content="width=device-width, user-scalable=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -17,9 +17,7 @@
   </header>
 
   <main id="main-container">
-    <a href="https://github.com/ParkSB">
-      <img id="github-heatmap" src="https://ghchart.rshah.org/ParkSB" alt="GitHub contribution heatmap">
-    </a>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
   </main>
 
   <script defer src="./src/ts/init.ts"></script>
